[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "adbctool"
version = "0.1.3"
description = "apollo dbc tool"
readme = "README.md"
requires-python = ">=3.6"
license = { text = "Apache-2.0" }
authors = [
  { name = "daohu527", email = "daohu527@gmail.com" }
]
urls = {
  "Homepage" = "https://github.com/daohu527/adbctool",
  "Bug Tracker" = "https://github.com/daohu527/adbctool/issues"
}
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent"
]
dependencies = [
  "pyyaml",
  "chardet"
]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"" = ["template/*.tpl"]

[project.scripts]
adbctool = "adbctool.gen:main"
