[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name            = "adbctool"
version         = "0.1.3"
description     = "apollo dbc tool"
readme          = "README.md"
requires-python = ">=3.6"
license         = "Apache-2.0"
authors = [
  { name  = "daohu527", email = "daohu527@gmail.com" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent"
]
dependencies = [
  "pyyaml",
  "chardet"
]

[project.urls]
Homepage   = "https://github.com/daohu527/adbctool"
BugTracker = "https://github.com/daohu527/adbctool/issues"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"adbctool" = ["template/*.tpl"]

[project.scripts]
adbctool = "adbctool.gen:main"
